// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`export.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/* @flow */
exports.x = 1;
exports.y = "";

=====================================output=====================================
/* @flow */
exports.x = 1;
exports.y = "";

================================================================================
`;

exports[`import.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/* @flow */
var e = require('./export');
var x: string = e.x;
var y: number = e.y;

=====================================output=====================================
/* @flow */
var e = require("./export");
var x: string = e.x;
var y: number = e.y;

================================================================================
`;
